--- a/src/pages/episodes/episode.module.scss
+++ b/src/pages/episodes/episode.module.scss
@@ -1,87 +1,134 @@
 .episode {
-  max-width: 45rem;
-  padding: 3rem 2rem;
-  margin: 0 auto;
+	max-width: 45rem;
+	padding: 3rem 2rem;
+	margin: 0 auto;
 
-  .thumbnailContainer {
-    position: relative;
+	.thumbnailContainer {
+		position: relative;
 
-    img {
-      border-radius: 1rem;
-    }
+		img {
+			border-radius: 1rem;
+		}
 
-    button {
-      width: 3rem;
-      height: 3rem;
-      border-radius: 0.75rem;
-      border: 0;
+		button {
+			width: 3rem;
+			height: 3rem;
+			border-radius: 0.75rem;
+			border: 0;
 
-      position: absolute;
-      z-index: 5;
-      font-size: 0;
+			position: absolute;
+			z-index: 5;
+			font-size: 0;
 
-      transition: filter 0.2s;
+			transition: filter 0.2s;
 
-      &:first-child {
-        left: 0;
-        top: 50%;
-        background: var(--purple-500);
-        transform: translate(-50%, -50%);
-      }
+			&:first-child {
+				left: 0;
+				top: 50%;
+				background: var(--purple-500);
+				transform: translate(-50%, -50%);
+			}
 
-      &:last-child {
-        right: 0;
-        top: 50%;
-        background: var(--green-500);
-        transform: translate(50%, -50%);
-      }
+			&:last-child {
+				right: 0;
+				top: 50%;
+				background: var(--green-500);
+				transform: translate(50%, -50%);
+			}
 
-      &:hover {
-        filter: brightness(0.9);
-      }
-    }
-  }
+			&:hover {
+				filter: brightness(0.9);
+			}
+		}
+	}
 
-  header {
-    padding-bottom: 1rem;
-    border-bottom: 1px solid var(--gray-100);
+	.imageCover {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
+		&::before {
+			content: "";
+			background: linear-gradient(90deg, #8256e5, #04d361);
+			position: absolute;
+			top: -5px;
+			left: -5px;
+			width: calc(100% + 10px);
+			height: calc(100% + 10px);
+			border-radius: 1rem;
+		}
+	}
 
-    h1 {
-      margin-top: 2rem;
-      margin-bottom: 1.5rem;
-    }
+	header {
+		padding-bottom: 1rem;
+		border-bottom: 1px solid var(--gray-100);
 
-    span {
-      display: inline-block;
-      font-size: 0.876rem;
+		&.Light {
+			h1,
+			span,
+			p {
+				color: var(--gray-800);
+			}
+		}
+		&.Dark {
+			h1,
+			span,
+			p {
+				color: #dfdfdf;
+			}
+		}
 
-      & + span {
-        margin-left: 1rem;
-        padding-left: 1rem;
-        position: relative;
+		h1 {
+			margin-top: 2rem;
+			margin-bottom: 1.5rem;
+		}
 
-        &::before {
-          content: "";
-          width: 4px;
-          height: 4px;
-          border-radius: 2px;
-          background: #DDD;
-          position: absolute;
-          left: 0;
-          top: 50%;
-          transform: translate(-50%, -50%)
-        }
-      }
-    }
-  }
+		span {
+			display: inline-block;
+			font-size: 0.876rem;
 
-  .description {
-    margin-top: 2rem;
-    line-height: 1.675rem;
-    color: var(--gray-800);
+			& + span {
+				margin-left: 1rem;
+				padding-left: 1rem;
+				position: relative;
 
-    p {
-      margin: 1.5rem 0;
-    }
-  }
+				&::before {
+					content: "";
+					width: 4px;
+					height: 4px;
+					border-radius: 2px;
+					background: #ddd;
+					position: absolute;
+					left: 0;
+					top: 50%;
+					transform: translate(-50%, -50%);
+				}
+			}
+		}
+	}
+
+	.description {
+		margin-top: 2rem;
+		line-height: 1.675rem;
+		color: var(--gray-800);
+
+		p {
+			margin: 1.5rem 0;
+		}
+
+		&.Light {
+			h1,
+			span,
+			p {
+				color: var(--gray-800);
+			}
+		}
+		&.Dark {
+			h1,
+			span,
+			p {
+				color: #dfdfdf;
+			}
+		}
+	}
 }
